<resources>
    <string name="app_name">NuevoAmigo</string>
    <string name="txtLogin">Iniciar sesión</string>
    <string name="txtDireccion">Dirección</string>
    <string name="txtCelular">Celular</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtCerrarSesion">Cerrar sesión</string>
    <string name="txtHorarioAtencion">Horario de atención</string>
    <string name="txtHorarioInicio">De:</string>
    <string name="txtHorarioFin">A:</string>
    <string name="txtGuardar">Guardar</string>
    <string name="title_activity_maps">Map</string>
    <string name="archivoSesion">archivoSesion</string>
    <string-array name="opcionesTamaño">
        <item>Opciones...</item>
        <item>Grande</item>
        <item>Mediano</item>
        <item>Chico</item>
    </string-array>

    <string-array name="opcionesSexo">
        <item>Opciones...</item>
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>

    <string name="txtTamano">Tamaño</string>
    <string name="txtSex">Sexo</string>
    <string name="title_activity_catalogo2">Catalogo2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_catalogo_propio">CatalogoPropio</string>

    <string name="facebook_app_id">1055065078284793</string>
    <string name="fb_login_protocol_scheme">fb1055065078284793</string>
    <string name="telefono">Teléfono</string>


    <string name="labelSexo">Sexo:</string>
    <string name="labelNombre">Nombre:</string>
    <string name="labelRaza">Raza:</string>
    <string name="labelEdad">Edad:</string>
    <string name="labelTamaño">Tamaño:</string>
    <string name="labelEstado">Estado:</string>
    <string name="soy_un_albergue">Soy un albergue</string>
    <string name="txtciudadu">Ciudad</string>
    <string name="terminar">Terminar</string>

    <string-array name="opcionesEstado">
        <item>Opciones...</item>
        <item>Disponible</item>
        <item>Proceso de adopción</item>
        <item>Adoptado</item>
    </string-array>
    <string name="nombre">Nombre*</string>
    <string name="raza">Raza*</string>
    <string name="descripci_n">Descripción (personalidad, complexion, etc.)</string>
    <string name="edad">Edad en meses*</string>
    <string name="a_adir_foto_de_perfil">Añadir foto de perfil</string>
    <string name="a_adir_foto_extra">Añadir foto secundaria</string>
    <string name="registrar">Registrar</string>
    <string name="sexo">Sexo*</string>
    <string name="hembra">Hembra</string>
    <string name="macho">Macho</string>
    <string name="textview">TextView</string>
    <string name="tama_o">Tamaño*</string>
    <string name="borrar">Borrar</string>
    <string name="cambiar_estado">¡Ya fue adoptado/a!</string>
    <string name="estado">Estado:</string>
    <string name="ingresar_la_edad_en_meses_si_no_sabes_la_edad_poner_0">Ingresar la edad en meses, si no sabes la edad poner 0</string>
    <string name="contactame">Contáctame</string>
    <string name="ver_catalogo">Catálogo del propietario</string>
    <string name="horario_de_atenci_n">Horario de atención:</string>
    <string name="ciudad">Ciudad</string>
    <string name="tipo_de_usuario">Tipo de usuario:</string>
    <string name="m_ndame_un_whatsapp">Mándame un Whatsapp</string>
    <string name="m_ndame_un_correo">Mándame un Correo</string>
    <string name="ciudad_de_la_mascota">Ciudad de la mascota</string>
    <string name="iniciarFacebook">INICIAR CON FACEBOOK</string>
    <string name="iniciarGoogle">INICIAR CON GOOGLE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscarperros">Buscar Perros</string>
    <string name="tu_perfil">Tu perfil</string>
    <string name="tus_perros">Tus Perros</string>
    <string name="camposObligatorios">*Campos obligatorios</string>
    <string name="nombreP">Nombre</string>
    <string name="amigos_caninos_en_tu_ciudad">Amigos caninos en tu ciudad</string>
    <string name="tu_catalogo_de_perros">Tu catálogo de perros</string>
    <string name="perro_no_encontrado">Perro NO encontrado</string>
    <string name="perro_ya_registrado">Perro ya registrado</string>
    <string name="catalogo_de_perros_de">\"Catálogo de perros de \"</string>
    <string name="persona">Persona</string>
    <string name="albergue">Albergue</string>
    <string name="hubo_un_error_al_recuperar_el_usuario_intentelo_mas_tarde">Hubo un error al recuperar el usuario, intentelo más tarde</string>
    <string name="soy">\", soy \"</string>
    <string name="te_contacté_por_medio_de_la_aplicación_Nuevo_Amigo_Estoy_interesado_en_adoptar_a_tu_perrito">\", te contacté por medio de la aplicación Nuevo Amigo. Estoy interesado/a en adoptar a tu perrito/a \"</string>
    <string name="whatsapp_no_instalado">Whatsapp no instalado</string>
    <string name="Asegurate_de_tener_instalada_la_aplicacion_de_whatsapp_para_ejecutar_esta_funcion">Asegúrate de tener instalada la aplicación de whatsapp, para ejecutar está función.</string>
    <string name="entendido">ENTENDIDO</string>
    <string name="no_puedes_enviar_muchos_correos_al_mismo_tiempo_intentalo_mas_tarde">No puedes enviar muchos correos al mismo tiempo, inténtalo más tarde</string>
    <string name="adoptar_perrito">Adoptar perrito</string>
    <string name="buen_dia">Buen día</string>
    <string name="correo_1">Somos del equipo de Nuevo Amigo. Enviamos este correo para que revise la aplicación de Nuevo Amigo.</string>
    <string name="correo_2">Parece que alguien está interesado en uno de sus perritos puestos en adopción, llamado</string>
    <string name="correo_3">No olvides responder al posible adoptante lo más antes posible, para que lleguen a un acuerdo sobre la adopción de</string>
    <string name="correo_4">Siempre estamos al tanto de nuestros usuarios, y de nuestros amigos perrunos.</string>
    <string name="correo_5">Atentamente,</string>
    <string name="correo_6">El Equipo de Nuevo Amigo</string>
    <string name="correo_enviado">Correo enviado</string>
    <string name="GPS_peticion">Por favor enciende el GPS de tu telefono</string>
    <string name="You_Last_Location_is_Long">\"You Last Location is : Long: \"</string>
    <string name="lat">\" , Lat: \"</string>
    <string name="seguro_que_deseas_borrar_al_perrito">¿Seguro que deseas borrar al perrito?</string>
    <string name="esta_accion_no_se_puede_deshacer">Esta acción no se puede deshacer</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="hubo_un_error">Hubo un error</string>
    <string name="adoptado">Adoptado</string>
    <string name="raza_">\"Raza: \"</string>
    <string name="sexo_">\"Sexo: \"</string>
    <string name="edad_">\"Edad: \"</string>
    <string name="añitos">\" añitos\"</string>
    <string name="meses">\" meses\"</string>
    <string name="tamano_">\"Tamaño: \"</string>
    <string name="oops_algo_ocurrio">Oops algo ocurrió</string>
    <string name="Ocurrio_un_problema_por_favor_intenta_mas_tarde">Ocurrió un problema, por favor intenta más tarde.</string>
    <string name="alerta">Alerta</string>
    <string name="Desea_registrarla_con_la_ciudad_que_tiene_registrada_en_su_perfil_o_la_ciudad_en_donde_esta">¡Desea registrarlo/a con la ciudad que tiene registrada en su perfil o la ciudad en donde está?</string>
    <string name="no_puedes_dejar_campos_en_blanco">No puedes dejar campos en blanco (incluidas imagenes)</string>
    <string name="plus">+</string>
    <string name="yuri_loka">Yuri Loka</string>
    <string name="raza_criolla">Raza: Criolla</string>
    <string name="perrita_amorosa">Perrita amorosa</string>
    <string name="sexo_hembra">Sexo: Hembra</string>
    <string name="edad_6_a_itos">Edad: 6 añitos</string>
    <string name="tama_o_peque_a">Tamaño: Pequeña</string>
    <string name="disponible">Disponible</string>
    <string name="perra_caraiso_a">Perra caraisoña</string>
    <string name="cristian_bravo">Cristian Bravo</string>
    <string name="acapulco_m_xico">Acapulco, México</string>
    <string name="_7442222222">7442222222</string>
    <string name="_10_00_22_00">10:00 - 22:00</string>
    <string name="editar">Editar</string>
    <string name="name">Name</string>
    <string name="amigos_caninos_tu_ciudad">Amigos caninos en tu ciudad</string>
    <string name="verificar">Puede que otros también lo estén tratando de adoptar</string>
    <string name="plus">+</string>

</resources>