<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_perro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edtRazaPerro2"
                    android:layout_width="210dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginRight="36dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtNombrePerro" />

                <TextView
                    android:id="@+id/labelNombre"
                    android:layout_width="75dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:text="@string/labelNombre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtNombrePerro"
                    android:layout_width="210dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginRight="36dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelRaza"
                    android:layout_width="75dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/labelRaza"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelNombre" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/puki" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edtEdadPerro"
                    android:layout_width="210dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerSexoPerro" />

                <TextView
                    android:id="@+id/labelSexo"
                    android:layout_width="75dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="36dp"
                    android:gravity="center"
                    android:text="@string/labelSexo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelEdad"
                    android:layout_width="75dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/labelEdad"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelSexo" />

                <TextView
                    android:id="@+id/labelTamaño"
                    android:layout_width="75dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/labelTamaño"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelEdad" />

                <TextView
                    android:id="@+id/labelEstado"
                    android:layout_width="75dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/labelEstado"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelTamaño" />

                <Spinner
                    android:id="@+id/spinnerTamanoPerro"
                    android:layout_width="210dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtEdadPerro" />

                <Spinner
                    android:id="@+id/spinnerEstadoPerro"
                    android:layout_width="210dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerTamanoPerro" />

                <Spinner
                    android:id="@+id/spinnerSexoPerro"
                    android:layout_width="210dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>